<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.ruleteacher.ui.home.HomeFragment"
        tools:layout="@layout/fragment_home"
        android:label="@string/title_home"
        />

    <fragment
        android:id="@+id/navigation_report"
        android:name="com.example.ruleteacher.ui.report.ReportFragment"
        tools:layout="@layout/fragment_report"
        android:label="@string/title_report"
        />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.ruleteacher.ui.profile.ProfileFragment"
        tools:layout="@layout/fragment_profile"
        android:label="@string/title_profile"
        />
    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.ruleteacher.ui.history.HistoryFragment"
        tools:layout="@layout/fragment_history"
        android:label="@string/title_history"
        />
</navigation>